hphp/hack/test/typecheck/defined/if_do_2.php.exp
File "if_do_2.php", line 14, characters 10-11:
Variable $y is undefined, or there exists at least one control flow path reaching this point which does not define $y. (Naming[2050])
